cmake_minimum_required(VERSION 3.17)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(CMAKE_ROOT
        #main.cpp
        #"0903- sort/13458.cpp"
       # "0903- sort/13458.cpp"
        #"0903- sort/11399.cpp"
         "1109 - DP/15683.cpp" "1109 - DP /2615.cpp" "1109 - DP /12852.cpp" "1109 - DP /11780.cpp" "1109 - DP /16964.cpp")