cmake_minimum_required(VERSION 3.17)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(CMAKE_ROOT
        #main.cpp
        #"0903- sort/13458.cpp"
       # "0903- sort/13458.cpp"
        #"0903- sort/11399.cpp"
         "1116 - tree/14503.cpp" "1116 - tree/2011.cpp" "1116 - tree/14675.cpp" "1116 - tree/15681.cpp" "1116 - tree/1967.cpp" "1123 - union/16236.cpp")