cmake_minimum_required(VERSION 3.17)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(CMAKE_ROOT
        #main.cpp
        #"0903- sort/13458.cpp"
       # "0903- sort/13458.cpp"
        #"0903- sort/11399.cpp"
      "1207 - topological sort/2252.cpp" "1207 - topological sort/kakaocardMatch.cpp" "1207 - topological sort/3085.cpp" "1207 - topological sort/buildRaceRoad.cpp" "1207 - topological sort/23059.cpp" "1207 - topological sort/2637.cpp")